[gd_scene load_steps=11 format=2]

[ext_resource path="res://assets/images/ui/icons/Start-Tile_icon_disabled.png" type="Texture" id=1]
[ext_resource path="res://assets/images/ui/icons/Start-Tile_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/images/ui/icons/highlight_icon.png" type="Texture" id=3]
[ext_resource path="res://assets/fonts/text_small.tres" type="DynamicFont" id=4]
[ext_resource path="res://scenes/ui/construction_drawer_button_group.gd" type="Script" id=5]
[ext_resource path="res://assets/audio/sounds/ui/UI_Menu_Mouse_Over_02.wav" type="AudioStream" id=6]
[ext_resource path="res://assets/fonts/text_smaller.tres" type="DynamicFont" id=7]
[ext_resource path="res://assets/images/white_rect_10x10.png" type="Texture" id=8]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0, 0.682353, 0.937255, 1 )

[sub_resource type="Animation" id=2]
resource_name = "blink_highlight"
tracks/0/type = "value"
tracks/0/path = NodePath("Panel/TutorialHighlightTextureRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6, 0.8, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[node name="ConstructionDrawerButtonGroup" type="VBoxContainer"]
margin_right = 60.0
margin_bottom = 76.0
custom_constants/separation = 3
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="."]
margin_right = 60.0
margin_bottom = 60.0
rect_min_size = Vector2( 60, 60 )
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
margin_right = 40.0
margin_bottom = 40.0
rect_min_size = Vector2( 60, 60 )
custom_constants/margin_right = 5
custom_constants/margin_top = 5
custom_constants/margin_left = 5
custom_constants/margin_bottom = 5
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureButton" type="TextureButton" parent="Panel/MarginContainer"]
margin_left = 5.0
margin_top = 5.0
margin_right = 55.0
margin_bottom = 55.0
shortcut_in_tooltip = false
texture_normal = ExtResource( 2 )
texture_disabled = ExtResource( 1 )

[node name="HighlightTextureRect" type="TextureRect" parent="Panel/MarginContainer/TextureButton"]
visible = false
margin_right = 50.0
margin_bottom = 50.0
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortcutLabel" type="Label" parent="Panel/MarginContainer/TextureButton"]
margin_right = 45.0
margin_bottom = 45.0
rect_min_size = Vector2( 50, 50 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0.682353, 0.937255, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 1
custom_constants/shadow_as_outline = 0
text = "(U)"
align = 2
valign = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TutorialHighlightTextureRect" type="TextureRect" parent="Panel"]
modulate = Color( 1, 1, 1, 0 )
self_modulate = Color( 1, 0, 0.411765, 1 )
show_behind_parent = true
margin_left = -5.0
margin_top = -5.0
margin_right = 65.0
margin_bottom = 65.0
rect_min_size = Vector2( 70, 70 )
mouse_filter = 2
texture = ExtResource( 8 )
expand = true
stretch_mode = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShortNameLabel" type="Label" parent="."]
margin_top = 63.0
margin_right = 60.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 2
text = "UUC"
align = 1

[node name="MouseOverStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )
volume_db = -6.0
bus = "UI"

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/blink_highlight = SubResource( 2 )
[connection signal="mouse_entered" from="Panel/MarginContainer/TextureButton" to="." method="_on_TextureButton_mouse_entered"]
[connection signal="mouse_exited" from="Panel/MarginContainer/TextureButton" to="." method="_on_TextureButton_mouse_exited"]
[connection signal="pressed" from="Panel/MarginContainer/TextureButton" to="." method="_on_TextureButton_pressed"]
